Fixed section__pic-container__3 size issue on mobile screens

--- a/website/css/mediaqueries.css
+++ b/website/css/mediaqueries.css
@@ -99,16 +99,16 @@
   .section__pic-container__3 {
     display: flex;
     height: 200px;
-    width: 300px;
+    width: 200px;
     margin: auto;
-    j .section__text__p2 {
-      font-size: 1.25rem;
-    }
-    .title {
-      font-size: 2rem;
-    }
-    .text-container {
-      text-align: justify;
-    }
+  }
+  .section__text__p2 {
+    font-size: 1.25rem;
+  }
+  .title {
+    font-size: 2rem;
+  }
+  .text-container {
+    text-align: justify;
   }
 }
